# mediacore

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  pyproject.toml
.cursor/rules/: mediacore-api.mdc  mediacore-core.mdc  mediacore-providers.mdc  mediacore-python.mdc  mediacore-registry.mdc  mediacore-upgrade.mdc
.github/workflows/: ci.yml  nightly.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_job_cancelled.py
apps/api/: config.py  main.py  schemas.py  security.py
apps/cli/: __init__.py  client.py  commands.py  main.py
apps/dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
apps/desktop/: README.md  package.json
apps/gateway/: README.md  nginx.conf
apps/scheduler/: main.py
apps/studio/: README.md  package.json
apps/worker/: actors.py  main.py
assets/: README.md
benchmarks/: Cargo.toml  README.md  bench_analyze.py
benchmarks/api/: analyze.rs  download.rs  grpc.rs  upload.rs  websocket.rs
benchmarks/common/: lib.rs
benchmarks/common/generators/: mod.rs
benchmarks/common/metrics/: mod.rs
benchmarks/common/profiler/: mod.rs
benchmarks/common/reporter/: mod.rs
benchmarks/common/utils/: mod.rs
benchmarks/core/: cache.rs  downloader.rs  events.rs  manifest.rs  metadata.rs  pipeline.rs  queue.rs  runtime.rs  scheduler.rs  url_parser.rs
benchmarks/desktop/: ipc.rs  rendering.rs  startup.rs  workflow.rs
benchmarks/media/: audio.rs  ffmpeg.rs  image.rs  subtitle.rs  thumbnail.rs  transcoding.rs  video.rs
benchmarks/network/: dns.rs  http.rs  retry.rs  streaming.rs  tls.rs
benchmarks/plugins/: communication.rs  execution.rs  lifecycle.rs  loading.rs
benchmarks/providers/: formats.rs  metadata.rs  parser.rs  provider_api.rs
benchmarks/python/core/: analyze_smoke.py
benchmarks/scripts/: compare.py  run_smoke.py
benchmarks/sdk/: dart.rs  go.rs  javascript.rs  python.rs  rust.rs
benchmarks/storage/: filesystem.rs  gdrive.rs  postgres.rs  redis.rs  s3.rs  sqlite.rs
benchmarks/stress/: cpu.rs  disk.rs  memory.rs  network.rs  workers.rs
benchmarks/worker/: concurrency.rs  execution.rs  jobs.rs  queue.rs
crates/mediacore-engine/: Cargo.toml
docker/: Dockerfile  docker-compose.yml
docker/prometheus/: prometheus.yml
docs/: api.md  architecture.md  index.md  package-lock.json  package.json  plugins.md  providers.md  roadmap.md  sdk.md  storage.md  testing.md  vision.md
docs/.vitepress/: config.mts
docs/api/: index.md
docs/architecture/: index.md  layout.md  mediacore-vs-ytdlp.md  overview.md  relationships.md
docs/benchmarks/: index.md
docs/deployment/: index.md
docs/getting-started/: index.md  roadmap.md  testing.md  vision.md
docs/plugins/: index.md  providers.md  register.md  storage.md
docs/public/: platforms.json  plugins.json  sdks.json
docs/sdk/: csharp.md  dart.md  go.md  index.md  java.md  javascript.md  kotlin.md  python.md  rust.md  swift.md  typescript.md
examples/: analyze.sh
extractor/: __init__.py
extractor/browser/: session.py
extractor/core/: __init__.py  base.py  downloader.py  engine.py  exceptions.py  models.py  parser.py  registry.py  validator.py
extractor/network/: http.py
extractor/providers/: __init__.py  base_stub.py
extractor/utils/: urls.py
ffmpeg/: __init__.py  wrapper.py
helm/: README.md
helm/mediacore/: Chart.yaml  values.yaml
jobqueue/: __init__.py  broker.py
mediacore/: __init__.py
patches/: 0001-readme-centered-title-version.patch
plugins/analytics/: plugin.py
plugins/auth-apikey/: plugin.py
plugins/discord/: plugin.py
plugins/ffmpeg/: plugin.py
plugins/metadata/: plugin.py
plugins/provider/: plugin.py
plugins/storage-azure/: plugin.py
plugins/storage-dropbox/: plugin.py
plugins/storage-ftp/: plugin.py
plugins/storage-gdrive/: plugin.py
plugins/storage-local/: plugin.py
providers/: README.md  __init__.py  base_module.py  base_stub.py  catalog.py  direct_media.py  oembed.py
queue/: README.md
scripts/: dev.sh  doctor.sh  export-openapi.sh  generate_plugins_docs.py  generate_providers.py  materialize_catalog_providers.py  provider_upgrade_queue.py  sync_platform_catalog.py  test.sh
sdk/: README.md
sdk/csharp/: README.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/apidownloader_sdk/: __init__.py
sdk/python/mediacore_sdk/: __init__.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
tests/: conftest.py  test_packages_filled.py
(+2930 files in other folders)
