[project]
name = "mediacore"
version = "0.1.0"
description = "MediaCore — open-source media extraction, processing, and automation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "dramatiq[redis]>=1.17.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "pyjwt>=2.10.0",
    "prometheus-client>=0.21.0",
    "greenlet>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.1.0",
    "pytest-timeout>=2.3.1",
    "respx>=0.21.1",
    "locust>=2.32.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[project.scripts]
mediacore = "apps.cli.main:main"
mediacore-api = "apps.api.main:run"
mediacore-worker = "apps.worker.main:run"
mediacore-scheduler = "apps.scheduler.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "mediacore",
    "packages",
    "providers",
    "apps",
    "extractor",
    "ffmpeg",
    "storage",
    "jobqueue",
]

# Ensure packages.testkit is importable in editable installs via pythonpath="."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 60
markers = [
    "unit: fast isolated unit tests",
    "integration: multi-component integration tests",
    "api: HTTP API tests",
    "provider: provider contract and unit tests",
    "plugin: plugin discovery and contract tests",
    "storage: storage backend contract tests",
    "e2e: end-to-end workflow tests",
    "performance: latency smoke tests",
    "benchmark: pytest-benchmark suites",
    "stress: stress / breaking-point tests",
    "load: locust/load scenarios (not PR CI)",
    "chaos: failure-injection tests",
    "security: authz and injection tests",
    "regression: locked bug-fix tests",
]
addopts = [
    "--strict-markers",
    "-q",
]

[tool.coverage.run]
branch = true
source = ["packages", "providers", "apps"]
omit = [
    "packages/testkit/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
