[package]
name = "mediacore-benchmarks"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Standalone MediaCore performance suite (Criterion + reports)"

[lib]
name = "mediacore_bench_common"
path = "common/lib.rs"

[dependencies]
mediacore-engine = { path = "../crates/mediacore-engine" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[[bench]]
name = "url_parser"
path = "core/url_parser.rs"
harness = false

[[bench]]
name = "metadata"
path = "core/metadata.rs"
harness = false

[[bench]]
name = "manifest"
path = "core/manifest.rs"
harness = false

[[bench]]
name = "cache"
path = "core/cache.rs"
harness = false

[[bench]]
name = "queue"
path = "core/queue.rs"
harness = false

[[bench]]
name = "events"
path = "core/events.rs"
harness = false

# Remaining category benches are scaffolded under */*.rs.
# Wire each with a [[bench]] entry as implementations land.
# Run smoke: cargo bench -p mediacore-benchmarks --bench url_parser
