[package]
name = "mediacore-sdk"
version = "0.1.0"
edition = "2021"
description = "MediaCore Rust SDK — unified client surface"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = ["async"]
async = ["dep:tokio"]
